Rework de la api para cumplir especifiacciones
